--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,13 @@
 @tailwind utilities;
 
 
-* {
+/* * {
   font-family: 'DM Sans', sans-serif;
 }
 
 .bg-future {
-  background-image: linear-gradient(rgb(49 31 60 / 60%), rgb(78 57 96 / 60%)), url('/assets/images/1.jpg')
-}
+  background: linear-gradient(rgb(49 31 60 / 60%), rgb(78 57 96 / 60%)), url("../../public/assets/images/1.jpg");
+} */
 
 .bg-right {
   background-position: right;
@@ -20,6 +20,5 @@
 
 .wrapper{
   display:grid;
-  /* height:100vh; */
   place-items:center
 }
