--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
-* {
+/* * {
   font-family: 'DM Sans', sans-serif;
-}
+} */
 
 .bg-future {
   background: linear-gradient(rgb(49 31 60 / 60%), rgb(78 57 96 / 60%)), url("../../public/assets/images/1.jpg");
