--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 @tailwind utilities;
 
 
-/* * {
+* {
   font-family: 'DM Sans', sans-serif;
-} */
+}
 
 .bg-future {
   background: linear-gradient(rgb(49 31 60 / 60%), rgb(78 57 96 / 60%)), url("../../public/assets/images/1.jpg");
