--- a/src/app/global-styles.scss
+++ b/src/app/global-styles.scss
@@ -40,10 +40,8 @@
 }
 
 
-@media only screen and (min-width: 922px) {
-  html {
-    font-size: 16px;
-  }
+html {
+  font-size: 15px;
 }
 
 body {
@@ -196,10 +194,6 @@ body {
   .card__body--space--three {
     margin-top: 11rem;
   }
-}
-
-section {
-  padding: 6rem 0;
 }
 
 .section {
@@ -671,7 +665,8 @@ span {
   cursor: pointer;
   padding: 1.5rem;
   margin-bottom: 30px;
-  border-radius: 8px;
+  border-radius: 12px;
+  overflow: hidden;
 
   &:hover {
     box-shadow: 0 2px 20px 0 grey;
@@ -691,7 +686,6 @@ span {
 
 .item .p-inner {
   padding: 20px 30px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .item .p-inner h5 {
@@ -2167,4 +2161,8 @@ a:focus {
 
 .container {
   max-width: 1250px;
+}
+
+.pattern-1 {
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(16) rotate(25)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 100%, 0.06)'/><path d='M30 25c-1.108 0-2 .892-2 2v1h-1c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1v-1c0-1.108-.892-2-2-2zM10 5c-1.108 0-2 .892-2 2v1H7c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1V7c0-1.108-.892-2-2-2zm10 15h20v20H20zM0 0h20v20H0z'  stroke-width='1' stroke='none' fill='hsla(259, 13%, 20%, 0.04)'/><path d='M10 25c-1.108 0-2 .892-2 2v1H7c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1v-1c0-1.108-.892-2-2-2zM30 5c-1.108 0-2 .892-2 2v1h-1c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1V7c0-1.108-.892-2-2-2z'  stroke-width='1' stroke='none' fill='hsla(47, 62%, 55%, 0.05)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>")
 }
