--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,38 @@
 .pp {
   --marquee-duration: 28320ms;
 }
+
+.subcribe-form input {
+  height: 50px;
+  width: 100%;
+  padding-top: 1rem;
+  -webkit-padding-end: 10rem;
+  padding-inline-end: 10rem;
+  padding-bottom: 1rem;
+  -webkit-padding-start: 1.5rem;
+  padding-inline-start: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(22 28 45 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.subcribe-form form .btnn {
+  position: absolute;
+  top: 2px;
+  inset-inline-end: 3px;
+  height: 46px;
+}
+
+.btnn {
+  display: inline-flex;
+  height: 2.5rem;
+  align-items: center;
+  justify-content: center;
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+  vertical-align: middle;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+}
