--- a/src/app/global-styles.scss
+++ b/src/app/global-styles.scss
@@ -1791,7 +1791,7 @@ a:focus {
   height: 150px;
   width: 150px;
   border: 1px solid rgba(0, 0, 0, .2);
-  border-radius: 50%;
+  border-radius: 32px;
   margin-bottom: 2rem;
   display: flex;
   align-items: center;
