--- a/src/app/global-styles.scss
+++ b/src/app/global-styles.scss
@@ -1181,7 +1181,7 @@ a:focus {
   max-width: 550px;
   background-color: #fff;
   background-size: contain;
-  color: #fff;
+  // color: #fff;
   transition: all 0.3s;
   height: calc(100% - 30px);
   width: 350px;
