--- a/src/app/global-styles.scss
+++ b/src/app/global-styles.scss
@@ -51,7 +51,10 @@ body {
 
 .navbar_bg {
   background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(30) rotate(55)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 100%, 0)'/><path d='M20 20v20h20V20zm5 5h10v10H25zM0 0v20h20V0zm5 5h10v10H5z'  stroke-width='1' stroke='none' fill='hsla(259, 59%, 59%, 0.04)'/><path d='M5 25h10v10H5zM25 5h10v10H25z'  stroke-width='1' stroke='none' fill='hsla(340, 82%, 52%, 0.04)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
-  // background-color: black;
+}
+
+.navbar_bg2 {
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(5) rotate(55)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 100%, 0)'/><path d='M20 20v20h20V20zm5 5h10v10H25zM0 0v20h20V0zm5 5h10v10H5z'  stroke-width='1' stroke='none' fill='hsla(259, 59%, 59%, 0.2)'/><path d='M5 25h10v10H5zM25 5h10v10H25z'  stroke-width='1' stroke='none' fill='hsla(340, 82%, 52%, 0.04)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
 
 .navigation {
