--- a/src/app/global-styles.scss
+++ b/src/app/global-styles.scss
@@ -2187,3 +2187,28 @@ a:focus {
 .pattern-1 {
   background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(16) rotate(125)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 100%, 0.02)'/><path d='M30 25c-1.108 0-2 .892-2 2v1h-1c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1v-1c0-1.108-.892-2-2-2zM10 5c-1.108 0-2 .892-2 2v1H7c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1V7c0-1.108-.892-2-2-2zm10 15h20v20H20zM0 0h20v20H0z'  stroke-width='1' stroke='none' fill='hsla(259, 13%, 20%, 0.04)'/><path d='M10 25c-1.108 0-2 .892-2 2v1H7c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1v-1c0-1.108-.892-2-2-2zM30 5c-1.108 0-2 .892-2 2v1h-1c-1.108 0-2 .892-2 2s.892 2 2 2h1v1c0 1.108.892 2 2 2s2-.892 2-2v-1h1c1.108 0 2-.892 2-2s-.892-2-2-2h-1V7c0-1.108-.892-2-2-2z'  stroke-width='1' stroke='none' fill='hsla(47, 62%, 55%, 0.035)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>")
 }
+
+.markdown {
+  h1,
+  h2 {
+    @apply mb-4 text-lg font-medium;
+  }
+
+  h3,
+  h4,
+  h5 {
+    @apply mb-4 text-[1.05rem] font-medium;
+  }
+
+  p {
+    @apply mb-6 last:mb-0;
+  }
+
+  ul {
+    @apply mb-4 ml-4 list-disc;
+  }
+
+  a {
+    @apply text-primary-500;
+  }
+}
