--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,13 +71,151 @@
 
 .swiper-button-prev {
   border: 1px solid red !important;
-  /* background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%234c71ae'%2F%3E%3C%2Fsvg%3E") !important; */
 }
 
 .swiper-button-next {
   border: 1px solid red !important;
+}
 
-  /* background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%234c71ae'%2F%3E%3C%2Fsvg%3E") !important; */
+#flamelab-convo-widget {
+  position: fixed;
+  bottom: 80px;
+  left: -40px;
+  animation-name: flamelab-convo-widget_enter;
+  animation-duration: 1.5s;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  z-index: 1000;
+  color: black;
+}
+
+#flamelab-convo-widget img {
+  animation-name: flamelab-convo-widget_rotate;
+  animation-duration: 1.5s;
+  transform: rotate(20deg);
+}
+
+.flamelab-cw-msg-box {
+  background: white;
+  width: 280px;
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .25);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  animation-name: flamelab-convo-widget_msg-appear;
+  animation-duration: 2s;
+  font-size: 15px;
+  line-height: 23px;
+}
+
+
+.flamelab-cw-buttons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0 -4px;
+  margin-top: 8px;
+  font-weight: 600;
+}
+
+.flamelab-cw-button-yes {
+  color: #FF1B96;
+  font-weight: 700;
+}
+
+.flamelab-cw-button {
+  cursor: pointer;
+  padding: 4px;
+  margin-right: 12px;
+  display: block;
+  text-decoration: none;
+}
+
+.flamelab-cw-button {
+  cursor: pointer;
+  padding: 4px;
+  margin-right: 12px;
+  display: block;
+  text-decoration: none;
+}
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import "toastr";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+* {
+  font-family: 'DM Sans', sans-serif;
+}
+
+@layer base {
+  .otpButton {
+     @apply w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-300 text-2xl bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700
+    }
+}
+
+.bg-future {
+  background: linear-gradient(rgb(49 31 60 / 60%), rgb(78 57 96 / 60%)), url("/assets/images/05.jpg");
+}
+
+.bg-right {
+  background-position: right;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.wrapper {
+  display: grid;
+  place-items: center
+}
+
+.pp {
+  --marquee-duration: 28320ms;
+}
+
+.subcribe-form input {
+  height: 50px;
+  width: 100%;
+  padding-top: 1rem;
+  -webkit-padding-end: 10rem;
+  padding-inline-end: 10rem;
+  padding-bottom: 1rem;
+  -webkit-padding-start: 1.5rem;
+  padding-inline-start: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(22 28 45 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.subcribe-form form .btnn {
+  position: absolute;
+  top: 2px;
+  inset-inline-end: 3px;
+  height: 46px;
+}
+
+.btnn {
+  display: inline-flex;
+  height: 2.5rem;
+  align-items: center;
+  justify-content: center;
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+  vertical-align: middle;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.swiper-button-prev {
+  border: 1px solid red !important;
+}
+
+.swiper-button-next {
+  border: 1px solid red !important;
 }
 
 #flamelab-convo-widget {
@@ -147,6 +285,6 @@
   background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='50' height='29.442' patternTransform='scale(16) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 13%, 1)'/><path d='M35.569-17.373 22.959 4.468l-12.61-21.841Zm0 29.442-12.61 21.84-12.61-21.84Zm25-14.721-12.61 21.841-12.61-21.841zm0 29.441-12.61 21.842-12.61-21.842Zm-33.478 0L39.7 4.95l12.61 21.84zM10.569-2.652l-12.61 21.841-12.61-21.841Zm0 29.441-12.61 21.842-12.61-21.842Zm-33.478 0L-10.3 4.95l12.61 21.84zm25-14.72L14.7-9.773l12.61 21.842zm0 29.441L14.7 19.67l12.61 21.841z'  stroke-width='0.5' stroke='hsla(47, 81%, 61%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>")
 } */
 
-.bg-responsiveHero {
+/* .bg-responsiveHero {
   background-image: linear-gradient(rgba(38, 25, 51, .6), rgba(25, 25, 51, .6)), url('/assets/images/company.jpg');
-}
+} */
